public/assets/css/style.css
body {
  background-image: url(../img/dark-honeycomb.png);
  background-repeat: repeat;
  text-align: center;
  color: black;
}
/* ======================================================= */
/* NAVBAR */
div#navbar-wrap {
  position: fixed;
  z-index: 10;
  right: 100%;
  width: 100%;
  height: 100%;
  align-content: center;
}

nav.navbar {
  background-color: rgba(0, 0, 0, 1) !important;
  color: white;
  position: absolute;
  left: 100%;
  flex-direction: column;
  width: 50px;
  height: 100%;
  padding: 0px;
  overflow-x: hidden;
  z-index: -1;
}

nav.ul {
  list-style: none;
}

nav.a {
  display: block;
  margin-top: 10px;
}

i.icon-menu {
  color: #2E7FAD;
  vertical-align: middle;
  padding-right: 35px;
}

.full-menu {
  visibility: hidden;
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
  background-color: #2E7FAD;
  color: #000000;
  cursor: pointer;
  padding: 10px;
  width: 100%;
  border: none;
  text-align: center;
  outline: none;
  font-size: 15px;
  visibility: hidden;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
  background-color: #ccc;
}

a.fa {
  color: #2E7FAD;
}

li.saved {
  padding: 0;
}
/* ======================================================= */
div.jumbo-logo {
  text-align: center;
  background-color: transparent !important;
  margin: 0;
  padding-top: 1%;
  padding-bottom: 1%;
}

img.navbar-logo {
  height: auto;
  width: 50%;
}

img.block-logo {
  width: 50%;
  height: auto;
}

div.login {
  margin-top: 3%;
  text-align: center;
}

div.login-card {
  background-color: rgba(255, 255, 255, 0.5);
  color: black;
}

li.list-group-item {
  background-color: transparent;
  text-align: center;
}

a:link {
  color: #2E7FAD;
  text-decoration: none;
}

a:visited {
  color: #2E7FAD;
  text-decoration: none;
}

a:hover {
  color: #000000;
  text-decoration: none;
}

a:active {
  color: #2E7FAD;
  text-decoration: none;
}

button.btn-sm {
  margin-bottom: 1%;
  color: #2E7FAD;
}

button.btn-link {
  text-decoration: none;
}

button.btn-link:visited {
  color: #2E7FAD;
  text-decoration: none;
}

button.btn-link:hover{
  text-decoration: none;
  color: #000000;
}

button.btn-link:active {
  color: #2E7FAD;
  text-decoration: none;
}

button.btn-secondary {
  margin-top: 1%;
  margin-bottom: 2%;
  background-color: #2E7FAD;
  color: white;
}

button.arrow {
  background-color: transparent;
  border: none;
}

button.arrow:hover {
  color: grey;
  background-color: transparent;
  text-decoration: none;
}

button#login {
  margin-top: 8%;
}

button#signup-button {
  margin-top: 8%;
  margin-bottom: 8%;
}

div.user-input-container {
  background-color: rgba(255, 255, 255, 0.5);
  color: black;
  border-radius: 5px;
  text-align: center;
  margin-top: 1%;
  margin-bottom: 1%;
  width: 18rem;
}

div.form-group {
  text-align: left;
  margin: 0;
}

div.email {
  padding-top: 0;
  padding-bottom: 0;
}

div.subject-display {
  height: 30rem;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.5);
  color: black;
  padding-top: 2%;
  padding-bottom: 2%;
  margin-left: 50px;
  overflow-y: scroll;
}

div.classes-display {
  height: 30rem;
  background-color: rgba(255, 255, 255, 0.5);
  padding-top: 2%;
  color: black;
  text-align: center;
  padding-bottom: 0;
  overflow-y: scroll;
}

li.smaller {
  font-size: smaller;
}

div.student-schedule {
  background-color: rgba(255, 255, 255, 0.5);
  padding-top: 1%;
  color: black;
  text-align: center;
  padding-bottom: 0;
  margin-left: 50px;
  margin-top: 2%;
  height: 30rem;
}

p#schedule-counter {
  margin-bottom: .25rem;
}

p.error-message {
  margin-top: .5rem;
  margin-bottom: 0;
  color: black;
  background-color: rgba(255, 255, 255, .5);
  border-radius: 5px;
}

hr {
  margin: 0 !important;
}

div.class-list {
  background-color: rgba(255, 255, 255, 0.5);
  padding-top: 1%;
  color: black;
  text-align: center;
  padding-bottom: 0;
  margin-top: 4%;
  height: 30rem;
  overflow-y: scroll;
}

h4 {
  text-align: center;
  color: black;
}

div.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  color: white;
  text-align: center;
  padding-bottom: 1%;
  font-size: 8pt;
}

h5.card-title {
  padding-top: 2%;
}

hr.top {
  margin-top: 0;
  margin-bottom: .5rem;
}

/* ======================================================= */
/* SCROLLBARS */
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1; 
}

::-webkit-scrollbar-thumb {
  background: #888; 
}

::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

